--- a/about.html
+++ b/about.html
@@ -12,17 +12,58 @@
 <body>
     <header>
         <div class="container">
-        <h1><a href="index.html">Tentang Kami</a></h1>
+        <h1><a href="index.html">Game&Co</a></h1>
         <a href="" class=""></a>
         
             <ul class="nav-items">
-                <li class="active"><a href="#"  class="nav-link clr-transition">Homepage</a></li>
+                <li class="active"><a href="gamepage.html"  class="nav-link clr-transition">Homepage</a></li>
                 <li><a href="gamepage.html"  class="nav-link clr-transition">Game</a></li>
                 <li><a href="about.html"  class="nav-link clr-transition">About</a></li> 
             </ul>
         </div>
     </header>    
 
-    
+
+<section>
+    <div class="konten">
+        <h2>ABOUT US</h2>
+    </div>
+
+    <div class="wrapper">
+        <div class="container">
+            <input type="radio" name="slide" id="c1" checked>
+            <label for="c1" class="card">
+                <div class="row">
+                    <div class="icon">1</div>
+                    <div class="description">
+                        <h4>Tyrone Paat</h4>
+                        <p>220211060283</p>
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c2" >
+            <label for="c2" class="card">
+                <div class="row">
+                    <div class="icon">2</div>
+                    <div class="description">
+                        <h4>Matthew Rarung</h4>
+                        <p>220211060283</p>
+                    </div>
+                </div>
+            </label>
+            <input type="radio" name="slide" id="c3" >
+            <label for="c3" class="card">
+                <div class="row">
+                    <div class="icon">3</div>
+                    <div class="description">
+                        <h4>Arnold Simanjuntak</h4>
+                        <p>220211060283</p>
+                    </div>
+                </div>
+            </label>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
