--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="">
         <h1><a href="index.html">Homepage</a></h1>
         <a href="" class=""></a>
         
