--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-        <h1><a href="index.html">Game&Co</a></h1>
+        <h1><a href="index.html">Game</a></h1>
         <a href="" class=""></a>
         
             <ul class="nav-items">
@@ -30,14 +30,14 @@
     </div>
 
     <div class="wrapper">
-        <div class="container">
+        <div class="container2">
             <input type="radio" name="slide" id="c1" checked>
             <label for="c1" class="card">
                 <div class="row">
                     <div class="icon">1</div>
                     <div class="description">
                         <h4>Tyrone Paat</h4>
-                        <p>220211060283</p>
+                        <p>220211060122</p>
                     </div>
                 </div>
             </label>
